--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -104,8 +104,7 @@ jobs:
         run: |
           brew install docker
           colima start
-          docker --version
-          sudo docker -–version
+          docker -v
 
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
