--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -104,7 +104,9 @@ jobs:
         run: |
           brew install docker
           colima start
+          rm -rf ~/.docker
           docker -v
+          which docker-compose
 
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
