--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -107,13 +107,21 @@ jobs:
       #     rm -rf ~/.docker
       #     docker -v
       #     which docker-compose
-      - name: Install docker
-        uses: docker-practice/actions-setup-docker@master
 
-      - run: |
-          set -x
+      - name: Install docker
+        run: |
+          brew install docker docker-machine docker-compose
+          colima start
           docker version
           docker compose version
+
+      # - name: Install docker
+      #   uses: docker-practice/actions-setup-docker@master
+
+      # - run: |
+      #     set -x
+      #     docker version
+      #     docker compose version
 
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
