--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -111,6 +111,8 @@ jobs:
       - name: Install docker
         run: |
           brew install docker docker-machine docker-compose
+          mkdir -p ~/.docker/cli-plugins
+          ln -sfn /usr/local/opt/docker-compose/bin/docker-compose ~/.docker/cli-plugins/docker-compose
           colima start
           docker version
           docker compose version
