--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -98,33 +98,8 @@ jobs:
 
   playwright:
     name: 🎭 Playwright
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
-      # - name: Install docker
-      #   run: |
-      #     brew install docker
-      #     colima start
-      #     rm -rf ~/.docker
-      #     docker -v
-      #     which docker-compose
-
-      - name: Install docker
-        run: |
-          brew install docker docker-machine docker-compose
-          mkdir -p ~/.docker/cli-plugins
-          ln -sfn /usr/local/opt/docker-compose/bin/docker-compose ~/.docker/cli-plugins/docker-compose
-          colima start
-          docker version
-          docker compose version
-
-      # - name: Install docker
-      #   uses: docker-practice/actions-setup-docker@master
-
-      # - run: |
-      #     set -x
-      #     docker version
-      #     docker compose version
-
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
 
@@ -139,11 +114,8 @@ jobs:
           useLockFile: false
           working-directory: ./participant
 
-      - name: 🎭 Install Playwright browsers
-        run: npx playwright install --with-deps
-
       - name: 🐳 Run Playwright in Docker Compose
-        run: npx playwright test --retries=3
+        run: npm run e2e
         working-directory: participant
 
       - name: 🗃 Archive test results
@@ -152,8 +124,3 @@ jobs:
         with:
           name: test-results
           path: participant/test-results
-
-      - name: 🐛 Add debug message
-        if: failure()
-        run: |
-          echo "If this fails, try running the Playwright Snapshots github actions workflow on your branch"
