[PRP-238] Streamline Playwright testing and generate linux snapshots on developer machines (#30)
- Change Playwright CI to create and test snapshots in linux by using a docker composition
- Remove newly created Github Action to manually generate linux snapshots (added in #27 )
- Add a dedicated e2e docker container image for testing that runs remix database reset as an entrypoint
- Add a Dockerfile to build and run headless browsers in a linux docker container 
- Change e2e docker-compose file to include a database, a remix server, and playwright with browsers
- Remove macOS snapshots
- Change npm scripts for e2e
- Remove html Playwright reporter

--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -114,11 +114,8 @@ jobs:
           useLockFile: false
           working-directory: ./participant
 
-      - name: 🎭 Install Playwright browsers
-        run: npx playwright install --with-deps
-
       - name: 🐳 Run Playwright in Docker Compose
-        run: npx playwright test --retries=3
+        run: npm run e2e
         working-directory: participant
 
       - name: 🗃 Archive test results
@@ -127,8 +124,3 @@ jobs:
         with:
           name: test-results
           path: participant/test-results
-
-      - name: 🐛 Add debug message
-        if: failure()
-        run: |
-          echo "If this fails, try running the Playwright Snapshots github actions workflow on your branch"
