--- a/participant/package.json
+++ b/participant/package.json
@@ -16,8 +16,9 @@
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "e2e": "npx playwright test --retries=3",
-    "e2e:update": "npx playwright test --update-snapshots",
+    "e2e": "docker compose -f docker-compose.e2e.yml up --build --wait database-e2e && docker compose -f docker-compose.e2e.yml up --build --wait remix-e2e && docker compose -f docker-compose.e2e.yml run --rm playwright npx playwright test --retries=3 --reporter=list",
+    "e2e:update": "docker compose -f docker-compose.e2e.yml up --build --wait database-e2e && docker compose -f docker-compose.e2e.yml up --build --wait remix-e2e && docker compose -f docker-compose.e2e.yml run --rm playwright npx playwright test --update-snapshots --reporter=list",
+    "e2e:cleanup": "docker compose -f docker-compose.e2e.yml down --remove-orphans",
     "storybook": "start-storybook -p 6006",
     "storybook:build": "build-storybook",
     "storybook:docker": "docker compose up -d remix_dev && docker compose exec remix_dev npm run storybook",
