--- a/staff/package.json
+++ b/staff/package.json
@@ -8,7 +8,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "prisma:update": "mkdir -p prisma/migrations && cp -r ../participant/prisma/migrations prisma && cp ../participant/prisma/schema.prisma prisma"
+    "prisma:update": "mkdir -p prisma/migrations && cp -r ../participant/prisma/migrations prisma && cp ../participant/prisma/schema.prisma prisma && cp ../participant/prisma/seed.ts prisma"
   },
   "dependencies": {
     "knex": "^2.4.2",
