--- a/staff/.gitignore
+++ b/staff/.gitignore
@@ -1,4 +1,11 @@
-/node_modules
 .lowdefy/**
+/node_modules
+/playwright-report
+/test-results
 
 .env
+
+# Ignore files that should be in sync with participant dir
+/prisma/migrations
+/prisma/schema.prisma
+/prisma/seed.ts
