--- a/staff/package.json
+++ b/staff/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "scripts": {
     "dev": "npx lowdefy@3.23.3 dev",
-    "e2e": "npx playwright test --retries=3",
-    "e2e:update": "npx playwright test --update-snapshots",
+    "e2e": "docker compose -f docker-compose.e2e.yml up --build --wait database-e2e && docker compose -f docker-compose.e2e.yml up --build --wait lowdefy-e2e && docker compose -f docker-compose.e2e.yml run --rm playwright npx playwright test --retries=3 --reporter=list",
+    "e2e:update": "docker compose -f docker-compose.e2e.yml up --build --wait database-e2e && docker compose -f docker-compose.e2e.yml up --build --wait lowdefy-e2e && docker compose -f docker-compose.e2e.yml run --rm playwright npx playwright test --update-snapshots --reporter=list",
+    "e2e:cleanup": "docker compose -f docker-compose.e2e.yml down --remove-orphans",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "prisma:update": "mkdir -p prisma/migrations && cp -r ../participant/prisma/migrations prisma && cp ../participant/prisma/schema.prisma prisma && cp ../participant/prisma/seed.ts prisma"
+    "prisma:prepare": "mkdir -p prisma/migrations && cp -r ../participant/prisma/migrations prisma && cp ../participant/prisma/schema.prisma prisma && cp ../participant/prisma/seed.ts prisma"
   },
   "dependencies": {
     "knex": "^2.4.2",
