--- a/participant/docker-compose.yml
+++ b/participant/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   postgres:
-    image: postgres
+    image: postgres:14
     environment:
       POSTGRES_PASSWORD: incredible_local_secret_phrase
       POSTGRES_USER: postgres
