--- a/staff/docker-compose.e2e.yml
+++ b/staff/docker-compose.e2e.yml
@@ -28,7 +28,7 @@ services:
       - staff-e2e
 
   # Create a lowdefy server to run e2e tests against
-  lowdefy-e2e:
+  app-e2e:
     build:
       target: dev
       context: .
@@ -48,7 +48,7 @@ services:
       - staff-e2e
     # Expose a port in case it's useful for debugging
     ports:
-      - 3000:3000
+      - 3123:3000
     volumes:
       # Mount the app directory for faster local development
       - ./:/home/node/lowdefy
@@ -63,7 +63,7 @@ services:
       dockerfile: ../participant/Dockerfile.playwright
     # lowdefy must be up and running before playwright will start
     depends_on:
-      lowdefy-e2e:
+      app-e2e:
         condition: service_healthy
     init: true
     networks:
