--- a/.github/workflows/ci-staff-portal.yml
+++ b/.github/workflows/ci-staff-portal.yml
@@ -92,15 +92,15 @@ jobs:
         uses: bahmutov/npm-install@v1
         with:
           useLockFile: false
-          working-directory: ./participant
+          working-directory: ./staff
 
       - name: 🐳 Run Playwright in Docker Compose
         run: npm run e2e
-        working-directory: participant
+        working-directory: staff
 
       - name: 🗃 Archive test results
         if: failure()
         uses: actions/upload-artifact@v3
         with:
-          name: test-results
-          path: participant/test-results
+          name: staff-playwright-test-results
+          path: staff/test-results
