--- a/analytics/docker-compose.yml
+++ b/analytics/docker-compose.yml
@@ -20,7 +20,8 @@ services:
       - mysql_data:/var/lib/mysql
 
   matomo:
-    image: matomo:4.14.1
+    # image: matomo:4.14.1
+    build: .
     environment:
       MATOMO_DATABASE_HOST: mysql
       MATOMO_DATABASE_USERNAME: matomo
@@ -31,6 +32,8 @@ services:
         condition: service_healthy
     ports:
       - 80:80
+      - 8080:8080
+    read_only: false
     volumes:
       - matomo_data:/var/www/html
 
