--- a/analytics/docker-compose.yml
+++ b/analytics/docker-compose.yml
@@ -20,8 +20,9 @@ services:
       - mysql_data:/var/lib/mysql
 
   matomo:
-    # image: matomo:4.14.1
-    build: .
+    build:
+      context: .
+      target: prod
     environment:
       MATOMO_DATABASE_HOST: mysql
       MATOMO_DATABASE_USERNAME: matomo
@@ -30,10 +31,9 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
+    init: true
     ports:
-      - 80:80
       - 8080:8080
-    read_only: false
     volumes:
       - matomo_data:/var/www/html
 
