--- a/analytics/docker-compose.yml
+++ b/analytics/docker-compose.yml
@@ -31,6 +31,11 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
+    healthcheck:
+      test: "wget --no-verbose --tries=1 --spider http://localhost:8080/ || exit 1"
+      interval: 30s
+      retries: 3
+      timeout: 5s
     init: true
     ports:
       - 8080:8080
