--- a/participant/package.json
+++ b/participant/package.json
@@ -56,7 +56,7 @@
     "react-number-format": "^5.1.2",
     "remix-i18next": "^4.2.0",
     "remix-image": "^1.3.3",
-    "remix-validated-form": "^4.6.5",
+    "remix-validated-form": "4.6.5",
     "tiny-invariant": "^1.3.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
