--- a/analytics/docker-compose.yml
+++ b/analytics/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       mysql:
         condition: service_healthy
     healthcheck:
-      test: "wget --no-verbose --tries=1 --spider http://localhost:8080/ || exit 1"
+      test: "curl --fail http://localhost:8080/matomo.php || exit 1"
       interval: 30s
       retries: 3
       timeout: 5s
