Allow build on M1 macs.

--- a/staff/package.json
+++ b/staff/package.json
@@ -34,5 +34,10 @@
     "/.lowdefy",
     "/node_modules",
     "/public"
-  ]
+  ],
+  "overrides": {
+    "lowdefy": {
+      "sqlite3": "^5.1.1"
+    }
+  }
 }
