--- a/staff/package.json
+++ b/staff/package.json
@@ -23,8 +23,7 @@
     "eslint-plugin-playwright": "^0.12.0",
     "lowdefy": "^3.23.3",
     "playwright-core": "^1.31.2",
-    "prettier": "^2.8.4",
-    "prisma": "^4.11.0"
+    "prettier": "^2.8.4"
   },
   "browserslist": [
     "defaults"
