--- a/staff/docker-compose.yml
+++ b/staff/docker-compose.yml
@@ -32,35 +32,38 @@ services:
       # Use a named volume for the node_modules so that the container uses the guest machine's node_modules dir instead of the host machine's node_modules directory, which might be divergent.
       - lowdefy_dev_nodemodules:/home/node/lowdefy/node_modules
 
-  # Include a prod remix container to set the db schema and seed the db.
-  remix_prod:
+  # Include a remix container to set the db schema and seed the db.
+  # Run the following to re-seed:
+  # `docker compose run --rm remix`
+  remix:
     build:
-      target: prod
+      target: dev
       context: ../participant
+    command: ["npm", "run", "dev:dbseed"]
     depends_on:
       postgres:
         condition: service_healthy
     environment:
       DATABASE_URL: postgresql://postgres:incredible_local_secret_phrase@postgres:5432/postgres?schema=public
     init: true
-    read_only: true
     ports:
       - "3053:3000"
     volumes:
       - ./prisma/seed.ts:/home/node/remix/prisma/seed.ts:ro
 
-  lowdefy_prod:
-    build:
-      target: prod
-      context: .
-    depends_on:
-      postgres:
-        condition: service_healthy
-    environment:
-      LOWDEFY_SECRET_PG_CONNECTION_STRING: postgresql://postgres:incredible_local_secret_phrase@postgres:5432/postgres?schema=public
-    init: true
-    ports:
-      - "3333:3000"
+  # lowdefy_prod:
+  #   build:
+  #     target: prod
+  #     context: .
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #   environment:
+  #     LOWDEFY_SECRET_PG_CONNECTION_STRING: postgresql://postgres:incredible_local_secret_phrase@postgres:5432/postgres?schema=public
+  #   init: true
+  #   ports:
+  #     - "3333:3000"
+  #   read_only: true
 
 volumes:
   lowdefy_dev_nodemodules:
