--- a/staff/lowdefy.yaml
+++ b/staff/lowdefy.yaml
@@ -1,7 +1,23 @@
 lowdefy: 3.23.3
-name: Lowdefy starter
+name: WIC Staff Portal
+
+cli:
+  disableTelemetry: true
+
+types:
+  AgGridAlpine:
+    url: https://blocks-cdn.lowdefy.com/v3.23.4/blocks-aggrid/meta/AgGridAlpine.json
+
+connections:
+  - id: postgres
+    type: Knex
+    properties:
+      client: postgres
+      connection:
+        _secret: PG_CONNECTION_STRING
 
 pages:
+  - _ref: recertifications.yaml
   - id: welcome
     type: PageHeaderMenu
     properties:
