--- a/staff/recertifications.yml
+++ b/staff/recertifications.yml
@@ -1,4 +1,4 @@
-id: recertifications # Lowdefy page ID
+id: hello # Lowdefy page ID
 type: PageHeaderMenu # Lowdefy page type
 
 requests: # Requests defines all the data requests made available in this page context
@@ -8,6 +8,12 @@ requests: # Requests defines all the data requests made available in this page c
     properties:
       # query: SELECT * FROM submission_forms GROUP_BY submission_id; # The sql query being sent to postgres
       # query: select format('%s %s', form_data->>'firstName', form_data->>'lastName') as contact_person from submission_forms;
+      #       query: select s.updated_at, la.name as agency_name
+      # from submissions s
+      # left join submission_forms sf on (s.submission_id = sf.submission_id)
+      # left join local_agencies la on (s.local_agency_id = la.local_agency_id)
+      # group by sf.submission_id, s.updated_at, la.name;
+
       query: select jsonb_object_agg(sf.form_route, sf.form_data) as form_data,
         s.updated_at,
         la.name as agency_name
@@ -28,24 +34,17 @@ events:
     #     method: autoSize
 
 blocks:
-  - id: Size To Fit
-    type: Button
-    events:
-      onClick:
-        - id: download
-          type: CallMethod
-          params:
-            blockId: table
-            method: sizeColumnsToFit
+  # - id: Size To Fit
+  #   type: Button
+  #   events:
+  #     onClick:
+  #       - id: download
+  #         type: CallMethod
+  #         params:
+  #           blockId: table
+  #           method: sizeColumnsToFit
   - id: table
     type: AgGridAlpine # A supporting component type that uses https://www.ag-grid.com
-    events:
-      onMountAsync:
-        - id: size
-          type: CallMethod
-          params:
-            blockId: table
-            method: sizeColumnsToFit
     properties:
       rowData:
         _request: get_data.rows # Send all the data returned by the query `get_data`
@@ -53,11 +52,26 @@ blocks:
         sortable: true
         resizable: true
         filter: true
-      autoSize:
-        - skipHeader: true
       columnDefs: # Define each table column
+        - headerName: Simple
+          valueGetter:
+            _function:
+              __log:
+                - __args: 0.data.form_data.name.firstName
+                - __args: 0.data.form_data.name.lastName
+                - __args: 0.data.form_data.contact.phoneNumber
+          cellRenderer:
+            _function:
+              __nunjucks:
+                template: |
+                  <div class="contact">
+                    <div class="name">{{ name.firstName }} {{ name.lastName }}</div>
+                    <div class="phone">{{ contact.phoneNumber }}</div>
+                  </div>
+                on:
+                  __args: 0.data.form_data
         - headerName: Submission date
-          field: created_at # The returned data field name
+          field: updated_at # The returned data field name
           valueFormatter:
             _function:
               __format.intlDateTimeFormat: # Use date time formatting https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/DateTimeFormat
@@ -68,7 +82,12 @@ blocks:
                     dateStyle: "short"
                     timeStyle: "long"
         - headerName: Contact person
-          field: form_data
+          valueGetter:
+            _function:
+              __log:
+                - __args: 0.data.form_data.name.firstName
+                - __args: 0.data.form_data.name.lastName
+                - __args: 0.data.form_data.contact.phoneNumber
           cellRenderer:
             _function:
               __nunjucks:
@@ -78,7 +97,7 @@ blocks:
                     <div class="phone">{{ contact.phoneNumber }}</div>
                   </div>
                 on:
-                  __args: 0.value
+                  __args: 0.data.form_data
           wrapText: true
         - headerName: WIC Participant(s)
           field: form_data
@@ -116,8 +135,8 @@ blocks:
                   {% endfor %}
                 on:
                   __args: 0.value
-          autoHeight: true
           wrapText: true
+          autoHeight: true
         - headerName: Household changes
           field: form_data
           cellRenderer:
@@ -142,7 +161,6 @@ blocks:
                   </div>
                 on:
                   __args: 0.value
-          autoHeight: true
           wrapText: true
         - headerName: Documents
           field: form_data
@@ -159,6 +177,7 @@ blocks:
                   </div>
                 on:
                   __args: 0.value
+          wrapText: true
         - headerName: Updates from participant
           field: form_data
           cellRenderer:
@@ -174,5 +193,4 @@ blocks:
                   </div>
                 on:
                   __args: 0.value
-          autoHeight: true
           wrapText: true
